# warm-light

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  package.json
crates/shared/src/: lib.rs
scripts/: check-ddc.sh  diff-vcp-snapshot.sh  probe-samsung-vcp.sh
src/: app.rs  interop.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  logging.rs  main.rs  monitor.rs
styles/: app.css
