[package]
name = "warmlight"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
anyhow = "1.0.100"
ddc-hi = "0.4.1"
serde = { version = "1.0.228", features = ["derive"] }
shared = { path = "../crates/shared" }
tauri = { version = "2.10.3", features = [] }
